[workspace]
members = [
    "oh-my-kiwi-domain",
    "oh-my-kiwi-server",
    "oh-my-kiwi-parser",
    "oh-my-kiwi-engine",
    "oh-my-kiwi-tcp",
    "oh-my-kiwi-bin",
]
resolver = "3"

[workspace.package]
edition = "2024"

[workspace.dependencies]
tokio = { version = "1.47.0", features = ["full"] }
thiserror = "2.0"
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
num-bigint = "0.4.6"
ordered-float = "5.0.0"
async-trait = "0.1.88"
